fix(print): Overflow wrap anywhere if a long word is found
overflow-wrap: anywhere; breaks anywhere in the string intead of just word end.
This is helpful to avoid breaking of print grid when an unexpectedly long word is passed.

(cherry picked from commit d217c94a084477ea631e88f6ff111a75e5c2eb91)

--- a/frappe/public/scss/print.scss
+++ b/frappe/public/scss/print.scss
@@ -34,3 +34,9 @@
 		margin: auto;
 	}
 }
+
+.overflow-wrap-anywhere {
+	* {
+		overflow-wrap: anywhere;
+	}
+}
